# charged-particles-simulation

./: CMakeLists.txt  ChargedParticle.cpp  ChargedParticle.h  Main.cpp  README.md  Vector2.h  constants.h  errorHandling.h
lib/: glfw3.lib
